--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,11 @@
 <h1> index </h1>
+
+<% @products.each do |product| %>
+
+<ul>
+  <li><%= product.name %> | <br>
+      <%= product.description %> |  <br/>
+      <%= product.price_in_cents %>
+  </li>  
+</ul>
+<% end %>
