--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,15 @@
 <h1> index </h1>
 
+<p>
+  <%= link_to 'New Product', new_product_path %>
+</p>
+
 <% @products.each do |product| %>
 
 <ul>
   <li><%= product.name %> | <br>
       <%= product.description %> |  <br/>
       <%= product.price_in_cents %>
-  </li>  
+  </li>
 </ul>
 <% end %>
