Adds add new product

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -15,7 +15,7 @@
 
   <p>
     <%= f.label :price_in_cents %>
-    <%= f.text_area :price_in_cents %>
+    <%= f.text_field :price_in_cents %>
   </p>
 
   <p>
