--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,15 @@
-<h1> show </h1>
+<h1> <%= @product.name %> </h1>
+
+<h3>
+  <%= @product.name %>
+</h3>
+
+<h4>
+  description
+  <%= @product.description %>
+</h4>
+
+<h5>
+  price per item
+  <%= @product.price_in_cents %>
+</h5>
