--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,5 @@
 <h1> <%= @product.name %> </h1>
-
-<h3>
-  <%= @product.name %>
-</h3>
+<p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
 
 <h4>
   description
