--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,26 +2,7 @@
 
 <%= link_to 'Show all pizzas', products_path %>
 
-<%= form_for @product do |f| %>
-  <p>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </p>
-
-  <p>
-    <%= f.label :price_in_cents %>
-    <%= f.text_field :price_in_cents %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form_html' %>
 
 <p>
   <% if @product.errors.any? %>
