home page and new product page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,21 @@
   </head>
 
   <body>
+
+    <nav>
+      <ul>
+        <li><%= link_to 'Home Page', products_path %> </li>
+        <li><%= link_to 'New Product', new_product_path %> </li>
+      </ul>
+
+    </nav>
+
+
+
     <%= yield %>
+
+
+
+
   </body>
 </html>
