--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,16 @@
         <li><%= link_to 'Home Page', products_path %> </li>
         <li><%= link_to 'New Product', new_product_path %> </li>
       </ul>
-
     </nav>
+
+    <% if flash[:notice] %>
+          <p class="notice"><%= flash[:notice] %></p>
+        <% end %>
+        <% if flash[:alert] %>
+          <p class="alert"><%= flash[:alert] %></p>
+        <% end %>
+
+
 
 
 
