--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
 
       <%= product.name %> | <br>
       <%= product.description %> |  <br/>
-      <%= product.price_in_cents %>
+      Price: <%= product.price_in_dollars %>
 
   </li>
 </ul>
