--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,15 @@
+
+
 <h1> <%= @product.name %> </h1>
 
-
-<p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
-
 <h4>
-  description
+  Description of Pizza:
   <%= @product.description %>
 </h4>
 
 <h5>
-  price per item
+  Price per Pizza: 
   <%= @product.price_in_cents %>
 </h5>
+
+<p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
