--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,8 +8,19 @@
 </h4>
 
 <h5>
-  Price per Pizza: 
+  Price per Pizza:
   <%= @product.price_in_cents %>
 </h5>
+
+<h5>  Reviews: </h5>
+<% @product.reviews.each do |our_comment|%>
+
+  <p>
+    <ul>
+      <li> <%= our_comment.created_at %> | <%= our_comment.comment %> </li>
+    </ul>
+  </p>
+<% end %>
+
 
 <p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
