--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,5 +22,32 @@
   </p>
 <% end %>
 
+<h4>New Review</h4>
+
+  <%= form_for([@product, @review]) do |f| %>
+
+    <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
+
+        <ul>
+        <% @review.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :comment %><br />
+      <%= f.text_area :comment %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+  <% end %>
+
+
+
 
 <p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
