--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,17 +18,15 @@
   <p>
     <ul>
       <li> <%= our_comment.created_at %> | <%= our_comment.comment %> </li>
-      <li> <%= link_to 'Edit' , "/products/#{params[:id]}/reviews/#{our_comment.id}/edit" %> </li>
+      <li> <%= link_to 'Edit' , "/products/#{params[:id]}/reviews/#{our_comment.id}/edit" %> |
+         <%= link_to 'Delete', product_review_path([@product,our_comment]), method: :delete, data: {confirm: "Are you sure you want to delete the review?  This can not be undone."} %> </li>
     </ul>
 
 <% end %>
 
 
-
 <h4>New Review</h4>
 
   <%= render 'reviews/form' %>
-
-
 
 <p><%= link_to 'Edit', edit_product_path %> | <%= link_to 'Delete', product_path(@product), method: :delete, data: {confirm: "Are you sure you want to delete the product '#{@product.name}'? This cannot be undone!"} %></p>
