--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
       <ul>
         <li><%= link_to 'Home Page', products_path %> </li>
         <li><%= link_to 'New Product', new_product_path %> </li>
+        <li><%= link_to 'New User', new_users_path %> </li>
+        <li><%= link_to 'Login', root_path %> </li>
+
+
       </ul>
     </nav>
 
