--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,9 @@
 <h1> Index of Our Pizzas and Prices </h1>
 
+<p><%= link_to 'New Pizza User', new_users_path %></p>
+<p><%= link_to 'Login for your pizza', root_path %></p>
+
+
 <% @products.each do |product| %>
 
 <ul>
