--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,6 +4,13 @@
 <p><%= link_to 'Login for your pizza', new_sessions_path %></p>
 
 
+<% if session[:user_id] %>
+  <p><%= link_to 'Logout', sessions_path %></p>
+  <p>Your balance is: $X</p>
+<% else %>
+  Please login to see your balance.
+<% end %>
+
 <% @products.each do |product| %>
 
 <ul>
