--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,10 +5,10 @@
 
 
 <% if session[:user_id] %>
-  <p><%= link_to 'Logout', sessions_path %></p>
-  <p>Your balance is: $X</p>
+  <p><%= link_to 'Logout', sessions_path, method: :delete %></p>
+
 <% else %>
-  Please login to see your balance.
+  <p>Please login to see our other pizza items. </p>
 <% end %>
 
 <% @products.each do |product| %>
